kubernetes/front-server.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: frontend-server
  namespace: myapp
spec: 
  selector: 
    matchLabels: 
      app: frontend 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: frontend  
    spec: 
      containers: 
        - name: frontend 
          image: esjwoo/mini-front:latest
          ports: 
            - containerPort: 443
---
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-service
  namespace: myapp
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 9443
      targetPort: 443
      nodePort: 30001
